# giskard-verification

./: .gitignore  LICENSE.md  README.md  _CoqProject  coq-giskard.opam  dune-project  index.html  meta.yml
.github/workflows/: coq-ci.yml  docker-action.yml
docs/v1.0/coqdoc/: Giskard.commit.html  Giskard.global.html  Giskard.lib.html  Giskard.local.html  Giskard.precommit.html  Giskard.prepare.html  Giskard.structures.html  indexpage.html
docs/v1.1/alectryon/: commit.html  global.html  lib.html  local.html  prepare.html  structures.html  toc.html
docs/v1.1/coqdoc/: Giskard.commit.html  Giskard.global.html  Giskard.lib.html  Giskard.local.html  Giskard.precommit.html  Giskard.prepare.html  Giskard.structures.html  indexpage.html  toc.html
report/: bib.bib  lstcoq.tex  macros.tex  report.tex
resources/: index.md
theories/: commit.v  dune  global.v  lib.v  local.v  precommit.v  prepare.v  structures.v
